--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,6 +5,5 @@
         android:id="@+id/action_delete"
         android:orderInCategory="100"
         android:title="Delete"
-        android:icon="@drawable/delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="" />
 </menu>
