--- a/app/src/main/res/layout/activity_custom_receipt.xml
+++ b/app/src/main/res/layout/activity_custom_receipt.xml
@@ -59,7 +59,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/colorBlack"
-                        android:text="Show Merchant Icon"/>
+                        android:text="Merchant Icon"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -159,8 +159,6 @@
                 android:textSize="16sp"
                 android:inputType="textMultiLine"
                 android:maxLines="5"
-                android:lines="2"
-                android:gravity="top"
                 android:id="@+id/etCustomReceiptSincere"/>
         </LinearLayout>
 
@@ -171,6 +169,7 @@
             android:text="Set As Default"
             android:background="@drawable/button_border_fill"
             android:layout_marginHorizontal="20sp"
+            android:layout_marginBottom="5dp"
             android:layout_marginTop="30dp"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnCustomReceiptSave"/>
