--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,43 +9,37 @@
     android:gravity="center"
     tools:context=".login.LoginActivity">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_margin="10dp"
-        android:elevation="10dp"
-        app:cardCornerRadius="5dp">
-        <LinearLayout
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="60dp"
+            android:src="@drawable/icon"/>
+
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="40dp"
+            android:id="@+id/btnLoginSignIn"
+            android:layout_marginHorizontal="10dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
+            android:text="Login"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/btnLoginSignUp"
             android:layout_margin="10dp"
-            android:gravity="center">
-
-            <ImageView
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginVertical="20sp"
-                android:src="@drawable/icon"/>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnLoginSignIn"
-                android:background="@drawable/button_border"
-                android:layout_margin="10dp"
-                android:text="Login"/>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnLoginSignUp"
-                android:background="@drawable/button_border"
-                android:layout_margin="10dp"
-                android:text="Create Account"/>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
+            android:text="Create Account"/>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
