--- a/app/src/main/res/layout/activity_merchant.xml
+++ b/app/src/main/res/layout/activity_merchant.xml
@@ -13,34 +13,45 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:elevation="10dp">
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
-            <TextView
+            android:layout_height="match_parent">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Choose Merchant"
-                android:textSize="24sp"
-                android:textColor="@color/colorBlack"
-                android:gravity="center"
-                android:id="@+id/tvMerchant"/>
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Choose Merchant"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorBlack"
+                    android:gravity="center"
+                    android:id="@+id/tvMerchant"/>
 
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginVertical="20sp"
-                android:id="@+id/spMerchant"/>
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginVertical="30sp"
+                    android:id="@+id/spMerchant"/>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnMerchant"
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/button_border_fill"
-                android:text="Select Merchant"/>
-        </LinearLayout>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:id="@+id/btnMerchant"
+                    android:textColor="@color/colorWhite"
+                    android:background="@color/colorPrimary"
+                    android:text="Select Merchant"/>
+            </LinearLayout>
+            <ProgressBar
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:id="@+id/pbMerchant"/>
+        </FrameLayout>
+
     </androidx.cardview.widget.CardView>
 
 
