--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -7,7 +7,7 @@
 
     <ProgressBar
         android:layout_width="30dp"
-        android:layout_height="match_parent"
+        android:layout_height="30dp"
         android:layout_gravity="center"
         android:id="@+id/pbProduct"/>
 
