--- a/app/src/main/res/menu/menu_check_out.xml
+++ b/app/src/main/res/menu/menu_check_out.xml
@@ -4,7 +4,6 @@
     <item
         android:id="@+id/action_select_customer"
         android:orderInCategory="100"
-        android:icon="@drawable/add_person"
-        android:title="Select Customer"
+        android:title="Add Cust"
         app:showAsAction="always" />
 </menu>
