- Fixing Bugs Sort Products - Showing Information when Clicked Stock Movement and Payment Lists - Enable Show Receipt from Customer Screen

--- a/app/src/main/res/layout/fragment_customer_detail_transaction.xml
+++ b/app/src/main/res/layout/fragment_customer_detail_transaction.xml
@@ -40,6 +40,7 @@
                     android:id="@+id/tvCustomerDetailTransactionTotal"
                     android:textColor="@color/colorBlack"
                     android:textSize="21sp"
+                    android:text="0"
                     android:gravity="end"
                     android:textStyle="bold"/>
             </LinearLayout>
